# NiftyMIC

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  MANIFEST.in  README.md  VolumetricReconstruction.sublime-project  VolumetricReconstruction.sublime-workspace  foo.py  install_cli.py  niftymic_correct_bias_field.py  niftymic_correct_intensities.py  niftymic_multiply.py  niftymic_nifti2dicom.py  niftymic_reconstruct_volume.py  niftymic_reconstruct_volume_from_slices.py  niftymic_register_image.py  niftymic_register_to_template.py  niftymic_rsfmri_estimate_motion.py  niftymic_rsfmri_reconstruct_volume_from_slices.py  niftymic_run_intensity_correction.py  niftymic_run_reconstruction_parameter_study.py  niftymic_run_reconstruction_pipeline.py  niftymic_segment_fetal_brains.py  niftymic_show_reconstruction_parameter_study.py  requirements-monaifbs.txt  requirements.txt  setup.py
GettingStarted/: DataPreprocessing.py  GettingStarted.sublime-project  GettingStarted.sublime-workspace  IRTK_01_ExampleUsageKeraudren.py  IRTK_02_SomeTests.py  ITK_01_Test_website.py  ITK_03_BinaryThresholdImageFilter.py  ITK_05_ResampleImageFilter_Rotation.py  ITK_06_SmoothingGaussianFilter_png.py  ITK_07_SmoothingGaussianFilter_nifti.py  ITK_BlurringOperator.py  ITK_BlurringOperator_Adjoint.py  ITK_GaussianInterpolator.py  ITK_ReconstructVolume.py  ITK_Registration.py  ITK_ScatteredDataApproximation.py  MyImageProcessingFunctions.py  MyImageProcessingHelpers.py  Optimization.py  Optimization_methods.py  SimpleITK_2D3DRegistration.py  SimpleITK_Blurring.py  SimpleITK_FiltersConvolve.py  SimpleITK_NiftyReg_FLIRT.py  SimpleITK_PhysicalCoordinates.py  SimpleITK_PlanarAlignment.py  SimpleITK_ScatteredDataApproximation.py  nnls-test_TomV.py  nnls-test_TomV2.py  test.py
GettingStarted/cpp/ITK-Examples/DoDataParallelThreading/: CMakeLists.txt
GettingStarted/cpp/ITK-Examples/ImageRegistrationMethodAffine/: CMakeLists.txt  ImageRegistrationMethodAffine.cxx
GettingStarted/cpp/ITK_Examples/MyFunctions/: AdjointOrientedGaussianInterpolateImageFilter.cxx  CMakeLists.txt  ResampleImageFilter.cxx
GettingStarted/cpp/MyAdjointOrientedGaussian/: CMakeLists.txt
GettingStarted/cpp/MyAdjointOrientedGaussian/source/: CMakeLists.txt  adjointOrientedGaussianInterpolateImageFilter.cpp  doDataParallelThreading.cpp
GettingStarted/cpp/MyAdjointOrientedGaussian/test/: adjointOrientedGaussianInterpolateImageFilter_UnitTests.cpp
GettingStarted/cpp/MyN4BiasFieldCorrectionImageFilter/source/: CMakeLists.txt  runN4BiasFieldCorrectionImageFilter.cpp
GettingStarted/cpp/MyOrientedGaussian/: CMakeLists.txt
GettingStarted/cpp/MyOrientedGaussian/include/: MyITKImageHelper.h  MyITKImageHelper.tpp
GettingStarted/cpp/MyOrientedGaussian/source/: CMakeLists.txt  MyITKImageHelper.cpp  resampleImageFilter.cpp
GettingStarted/cpp/MyOrientedGaussian/test/: CMakeLists.txt  adjointOrientedGaussianInterpolateImageFilter_UnitTests.cpp
cpp/: CMakeLists.txt
cpp/include/: MyException.h  MyITKImageHelper.h  itkScaledTranslationEuler3DTransform.h  itkScaledTranslationEuler3DTransform.hxx
cpp/source/: CMakeLists.txt  ExceptionCommandLine.cpp  MyException.cpp  MyITKImageHelper.cpp  itkAffineReg.cpp  itkInplaneSimilarity3DReg.cpp  itkReg.cpp  itkRegTest.cpp  readCommandLine.cpp  runN4BiasFieldCorrectionImageFilter.cpp
cpp/test/: CMakeLists.txt  adjointOrientedGaussianInterpolateImageFilter_UnitTests.cpp  itkInplaneSimilarity3DTransform_UnitTests.cpp
doc/: doxyfile
docker/: docker-compose.yml
examples/: reconstructStaticVolume.py  reconstructVolume.py  reconstructVolumeFromSlices.py
matlab/: createRectangularMask.m  generateSheppLoganPhantom3D.m  test.m  testPSFSigma.m  untitled.m
monaifbs/: README.md  __about__.py  __init__.py  fetal_brain_seg.py
niftymic/: __about__.py  __init__.py  definitions.py  itkReg.so.REMOVED.git-id
niftymic/cli/: CMakeLists.txt
niftymic/cli/include/: ExceptionCommandLine.h  MyITKImageHelper.tpp  readCommandLine.h
niftymic/cli/src/: CMakeLists.txt  itkInplaneSimilarity3DReg.cpp
niftymic/cli/test/: itkAdjointOrientedGaussianInterpolateImageFilter_UnitTests.cpp  itkGradientEuler3DTransformImageFilter_UnitTests.cpp  itkOrientedGaussianInterpolateImageFilter_UnitTests.cpp
results/: Archive.zip.REMOVED.git-id
src/: DataPreprocessing.py  FetalImage.py  FileAndImageHelpers.py  FirstEstimateOfHRVolume.py  HierarchicalSliceAlignment.py  InPlaneRigidRegistration.py  IntensityNormalization.py  InverseProblemSolver.py  MyImageProcessingFunctions.py  NiftyReg.py  PSF.py  ReconstructionManager.py  Registration.py  RegistrationITK.py  RegistrationSimpleITK.py  RegularizationParameterEstimation.py  ScatteredDataApproximation.py  SimilarityMeasures.py  SimpleITKHelper.py  Slice.py  SliceStack.py  SliceToVolumeRegistration.py  Stack.py  StackAverage.py  StackManager.py  TwoDImage.py  VolumeReconstruction.py  main.py  main_UnitTests.py  simulateAcquisition.py  test.py
src/cpp/: CMakeLists.txt
src/cpp/include/: MyITKImageHelper.h  itkScaledTranslationEuler3DTransform.h  itkScaledTranslationEuler3DTransform.hxx
src/cpp/source/: CMakeLists.txt  MyITKImageHelper.cpp  itkReg.cpp  itkRigidReg.cpp  readCommandLine.cpp
src/cpp/test/: CMakeLists.txt  adjointOrientedGaussianInterpolateImageFilter_UnitTests.cpp  itkAdjointOrientedGaussianInterpolateImageFilter_UnitTests.cpp  itkGradientAffine3DTransformImageFilter_UnitTests.cpp  itkInplaneSimilarity3DTransform_UnitTests.cpp  itkOrientedGaussianInterpolateImageFilter_UnitTests.cpp
test/: Test_main.py  main_UnitTests.py  main_UnitTests_old.py
tests/: TestBrainStripping.py  TestDifferentialOperations.py  TestFirstEstimateOfHRVolume.py  TestHierarchicalSliceAlignment.py  TestInPlaneRegistrationSimpleITK.py  TestIntensityCorrection.py  TestIntraStackRegistration.py  TestLinearImageQualityTransfer.py  TestNiftyReg.py  TestParameterNormalization.py  TestRegistration.py  TestRegistrationCppITK.py  TestSegmentationPropagation.py  TestSimulatorSliceAcqusition.py  TestStack.py  brain_stripping_test.py  case_study_fetal_brain_test.py  case_study_rsfmri_test.py  (+20 more)
(+513 files in other folders)
